# Vec4Rec

./: Vec4Rec.py  demo.py  pyproject.toml
Vec4Rec/: __init__.py  models.py  storage.py
src/: models.py  queries.sql  storage.py
tests/: models.py  models_test.py  storage_test.py
